name:                ping-pong
version:             0.1.0.0
synopsis:            Examples of using Haskell's async library.
description:         Please see README.md
homepage:            https://github.com/stormont/async-examples
license:             BSD3
license-file:        LICENSE
author:              Devan Stormont
maintainer:          stormont@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable ping-pong-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ping-pong
  default-language:    Haskell2010

test-suite ping-pong-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ping-pong
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/stormont/async-examples
